--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<head>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3419436241282838",
+    enable_page_level_ads: true
+  });
+</script>
 		<style>
 		#review-2018 #wrap #team-gallery img{
 			width:100% !important;
